style changes and removing redundant code